--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
-    "@nrwl/angular": "14.2.2",
+    "@nrwl/angular": "14.3.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -32,13 +32,13 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
-    "@nrwl/cli": "14.2.2",
-    "@nrwl/cypress": "14.2.2",
-    "@nrwl/eslint-plugin-nx": "14.2.2",
-    "@nrwl/jest": "14.2.2",
-    "@nrwl/linter": "14.2.2",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.2.2",
+    "@nrwl/cli": "14.3.3",
+    "@nrwl/cypress": "14.3.3",
+    "@nrwl/eslint-plugin-nx": "14.3.3",
+    "@nrwl/jest": "14.3.3",
+    "@nrwl/linter": "14.3.3",
+    "@nrwl/nx-cloud": "14.1.1",
+    "@nrwl/workspace": "14.3.3",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.24.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
-    "nx": "14.2.2",
+    "nx": "14.3.3",
     "prettier": "^2.6.2",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
