--- a/libs/modus/project.json
+++ b/libs/modus/project.json
@@ -33,6 +33,35 @@
       "options": {
         "lintFilePatterns": ["libs/modus/**/*.ts", "libs/modus/**/*.html"]
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/modus/.storybook",
+        "browserTarget": "modus:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputDir": "dist/storybook/modus",
+        "configDir": "libs/modus/.storybook",
+        "browserTarget": "modus:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": []
