--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "version": 2,
   "projects": {
     "modus": "libs/modus",
+    "modus-e2e": "apps/modus-e2e",
     "site": "apps/site",
     "site-e2e": "apps/site-e2e"
   }
