--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "$schema": "./node_modules/nx/schemas/workspace-schema.json",
   "version": 2,
   "projects": {
+    "feature-generators": "libs/feature-generators",
     "modus": "libs/modus",
     "modus-e2e": "apps/modus-e2e",
     "site": "apps/site",
