--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "npmScope": "alacarta",
+  "npmScope": "code-machina",
   "affected": {
     "defaultBase": "main"
   },
