--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,14 +10,24 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@alacarta/feature-generators": ["libs/feature-generators/src/index.ts"],
-      "ng-modus": ["libs/modus/src/index.ts"]
+      "@code-machina/feature-generators": [
+        "libs/feature-generators/src/index.ts"
+      ],
+      "ng-modus": [
+        "libs/modus/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
