--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,10 +10,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -21,13 +18,9 @@
       "@code-machina/feature-generators": [
         "libs/feature-generators/src/index.ts"
       ],
-      "ng-modus": [
-        "libs/modus/src/index.ts"
-      ]
+      "@code-machina/utils": ["libs/utils/src/index.ts"],
+      "ng-modus": ["libs/modus/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
